# Tape-Line

./: CMakeLists.txt  README.md  gitHub  gitHub.pub
src/qml/: main.qml
